--- a/index.html
+++ b/index.html
@@ -2,34 +2,48 @@
 <html>
  <head>
 
-  <title>Hello</title>
+  <title>EyesGuard</title>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="./img/eg_favicon.png" type="image/x-icon">
   <!-- <meta name ="viewport" contetnt="width=device-width, initial-scale=1"> -->
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
   <link href="./css/styles.css" rel="stylesheet">
 
  </head>
 
-<body class = "backcolor_body">
+<body class = "style-body">
 
-      <div class="container-fluid backcolor_2">
-
+      <!-- <div class="container-fluid backcolor_2"> -->
+<div class="style-header">
   <div>
-    <ul class="MainMenuItems" >
+    <ul class="main-menu-items" >
 
-      <li><a href="#" class="FontMainMenu">HOME</a></li>
-      <li><a href="#" class="FontMainMenu" >ABOUT</a></li>
-      <li><a href="#" class="FontMainMenu">RECOMMENDATIONS</a></li>
-      <li><a href="#" class="FontMainMenu">DOWNLOAD</a></li>
-      <li><a href="#" class="FontMainMenu">CONTACT</a></li>
+      <li><a href="#" class="font-main-menu">HOME</a></li>
+      <li><a href="#" class="font-main-menu" >ABOUT</a></li>
+      <li><a href="#" class="font-main-menu">RECOMMENDATIONS</a></li>
+      <li><a href="#" class="font-main-menu">DOWNLOAD</a></li>
+      <li><a href="#" class="font-main-menu">CONTACT</a></li>
     </ul>
   </div>
+  <div>
+    <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
+  </div>
 
-    <h1 class="font_H1">EyesGuard</h1>
-    <h2 class="FontMainMenu">Пфис adc EyesGuard dfghjkjltty</font></h2>
+  <div>
+    <h1>EyesGuard</h1>
+    <h2>
+      <span class="color_23">KEEPS</span>
+      <span class="color_21">YOUR VISION</span>
+      <span class="color_11">IN ORDER</span> </h2>
+  </div>
+  <div class="class-white-bar">
 
+  </div>
 
+    <!-- <h2 class="font-main-menu"> adc EyesGuard dfghjkjltty</font></h2> -->
 </div>
+
+<!-- </div> -->
 
 
 
