--- a/index.html
+++ b/index.html
@@ -25,17 +25,22 @@
       <li><a href="#" class="font-main-menu">CONTACT</a></li>
     </ul>
   </div>
-  <div>
-    <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
-  </div>
 
-  <div>
-    <h1>EyesGuard</h1>
-    <h2>
-      <span class="color_23">KEEPS</span>
-      <span class="color_21">YOUR VISION</span>
-      <span class="color_11">IN ORDER</span> </h2>
-  </div>
+<div  style="position: relative; top:-20px;margin:0 5% 0 15%">
+
+    <div >
+      <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
+    </div>
+
+    <div>
+      <h1>EyesGuard</h1>
+      <h2>
+        <span class="color_23">KEEPS</span>
+        <span class="color_21">YOUR VISION</span>
+        <span class="color_11">IN ORDER</span> </h2>
+    </div>
+</div>
+
   <div class="class-white-bar">
 
   </div>
