--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
   </div>
 
-<div  style="position: relative; top:-20px;margin:0 5% 0 15%">
+<div  class ="style-banner">
 
     <div >
       <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
