--- a/index.html
+++ b/index.html
@@ -13,21 +13,25 @@
 
 <body class = "style-body">
 
-      <!-- <div class="container-fluid backcolor_2"> -->
-<div class="style-header">
-  <div>
-    <ul class="main-menu-items" >
+<!-- Шапка страницы -->
+  <div class="style-header">
+  <!-- Главное меню -->
+    <div>
+      <ul class="main-menu-items" >
+        <li><a href="#" class="font-main-menu">HOME</a></li>
+        <li><a href="#" class="font-main-menu" >ABOUT</a></li>
+        <li><a href="#" class="font-main-menu">RECOMMENDATIONS</a></li>
+        <li><a href="#" class="font-main-menu">DOWNLOAD</a></li>
+        <li><a href="#" class="font-main-menu">CONTACT</a></li>
+      </ul>
+    </div>
+  <!-- Флаг языка -->
+    <div >
+      <img src="./img/rus.gif" alt="Russian" class="img-lang">
+    </div>
 
-      <li><a href="#" class="font-main-menu">HOME</a></li>
-      <li><a href="#" class="font-main-menu" >ABOUT</a></li>
-      <li><a href="#" class="font-main-menu">RECOMMENDATIONS</a></li>
-      <li><a href="#" class="font-main-menu">DOWNLOAD</a></li>
-      <li><a href="#" class="font-main-menu">CONTACT</a></li>
-    </ul>
-  </div>
-
-<div class="style-banner">
-
+  <!-- Центральная надпись -->
+  <div class="style-banner">
     <div >
       <img src="./img/eg_logo.png" alt="EyesGuard logo" class="img-logo">
     </div>
@@ -37,19 +41,74 @@
       <h2>
         <span class="color_23">KEEPS</span>
         <span class="color_21">YOUR VISION</span>
-        <span class="color_11">IN ORDER</span> </h2>
+        <span class="color_11">IN ORDER</span>
+      </h2>
     </div>
-</div>
-
-  <div class="class-white-bar">
-
   </div>
-
-    <!-- <h2 class="font-main-menu"> adc EyesGuard dfghjkjltty</font></h2> -->
+    <!-- Белая полоска   -->
+  <div class="class-white-bar">
+  </div>
 </div>
 
-<!-- </div> -->
+<!-- Первая страница -->
+<div>
+  <table cellpadding="20" style="width: 86%; left: 7%; height=100%; align: center; position: relative; top: 160px">
+    <tr>
+      <td style="width: 50%; cellpadding: 20">
+        <p class="text-page1">If you work a lot on a computer and want to keep your vision in order or to keep vision of your children and relatives, who are crazy of PC, this program will be very useful for you!</p>
 
+        <section class="flat-button" style="text-align: center">
+        <button>Download EyesGuard >></button>
+        </section>
+        <div style="text-align: center"><img class="img-man-and-pc" src="./img/man_and_pc.png" alt="Tired man in fron of PC">
+        </div>
+      </td>
+      <td  style="width: 50%; cellpadding: 20">
+
+        <div style="text-align: center"><img class="img-girl-and-pc" src="./img/girl_and_pc.png" alt="Tired girl in fron of PC">
+        </div>
+
+
+        <p class="text-page1">EyesGuard will remind you about necessity to have a break during a long work on computer. This program places an icon into the system tray and does not disturb your work. It allows to adjust the time between breaks (work time), breaks duration (break time) and has some more functions: sound effects, turning your monitor off during the break.Try to use this program and then EyesGuard will guard your vision!
+        </p>
+     </td>
+    </tr>
+  </table>
+</div>
+
+<br>
+<br>
+<br>
+<!-- Вторая страница -->
+<div>
+  <table cellpadding="20" style="width: 86%; left: 7%; height=100%; align: center; position: relative; top: 160px">
+    <tr>
+      <td style="width: 50%; cellpadding: 20">
+        <p class="text-page1">If you work a lot on a computer and want to keep your vision in order or to keep vision of your children and relatives, who are crazy of PC, this program will be very useful for you!</p>
+
+        <section class="flat-button" style="text-align: center">
+        <button>Download EyesGuard >></button>
+        </section>
+        <div style="text-align: center"><img class="img-man-and-pc" src="./img/man_and_pc.png" alt="Tired man in fron of PC">
+        </div>
+      </td>
+      <td  style="width: 50%; cellpadding: 20">
+
+        <div style="text-align: center"><img class="img-girl-and-pc" src="./img/girl_and_pc.png" alt="Tired girl in fron of PC">
+        </div>
+
+
+        <p class="text-page1">EyesGuard will remind you about necessity to have a break during a long work on computer. This program places an icon into the system tray and does not disturb your work. It allows to adjust the time between breaks (work time), breaks duration (break time) and has some more functions: sound effects, turning your monitor off during the break.Try to use this program and then EyesGuard will guard your vision!
+        </p>
+     </td>
+    </tr>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+  </table>
+</div>
 
 
 
