--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ $(document).ready(function(){
         <p>If you work a lot on a computer and want to keep your vision in order or to keep vision of your children and relatives, who are crazy of PC, this program will be very useful for you!</p>
         <br>
         <section class="flat-button" style="text-align: center">
-        <button onclick="location.href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.20/EyesGuard.exe"">
+        <button onclick="location.href='https://github.com/ExplorerOL/EyesGuard/releases/download/v1.20/EyesGuard.exe'">
           Download EyesGuard >>
        </button>
         </section>
@@ -187,8 +187,9 @@ $(document).ready(function(){
   <p>EyesGuard is distributed under the GNU General Public License. The official publication of the license GNU GPL you can find here:
     <a style="color: #000000" href="http://www.gnu.org/licenses/gpl.html">http://www.gnu.org/licenses/gpl.html</a>
   </p>
-  <p >Last version of EyesGuard you can download from here. <br>
-      Source code and previous versions are also available at GitHub.
+  <p >Last version of EyesGuard you can download from
+    <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases/download/v1.20/EyesGuard.exe">here</a>. <br>
+      Source code and previous versions are also <a style="color: #000000" href="https://github.com/ExplorerOL/EyesGuard/releases">available at GitHub</a>.
   </p>
 
   <p>EyesGuard was written using the IDE Borland C++ Builder 6.
