--- a/index.html
+++ b/index.html
@@ -235,6 +235,9 @@ $(document).ready(function(){
   <br>
   <br>
   <img src="http://dd.c3.bf.a1.top.mail.ru/counter?id=2047352;t=55" border="0" height="31" width="88" alt="Рейтинг@Mail.ru">
+
+  <script src="//catcut.net/adv/16992"></script>
+  
 </footer>
 
  </body>
