--- a/index.html
+++ b/index.html
@@ -235,9 +235,12 @@ $(document).ready(function(){
   <br>
   <br>
   <img src="http://dd.c3.bf.a1.top.mail.ru/counter?id=2047352;t=55" border="0" height="31" width="88" alt="Рейтинг@Mail.ru">
-
-  <script src="//catcut.net/adv/16992"></script>
   
+<div style="width: 100px; height: 50px;">
+  <script src="//catcut.net/adv/16992"></script>
+</div>
+
+
 </footer>
 
  </body>
