--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@ $(document).ready(function(){
   <img src="http://dd.c3.bf.a1.top.mail.ru/counter?id=2047352;t=55" border="0" height="31" width="88" alt="Рейтинг@Mail.ru">
 
 <div style="width: 80px; height: 30px; position:relative; right: 5%;">
-  <script src="//catcut.net/adv/16992"></script>
+  <script style="width: 80px; height: 30px; position:relative; right: 5%;" src="//catcut.net/adv/16992"></script>
 </div>
 
 
