--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
 </script>
 
 
-<meta name="CatCut161524c8db" content="33E61512DCE20F11A25308B134673E04Y2009" />
+<!-- <meta name="CatCut161524c8db" content="33E61512DCE20F11A25308B134673E04Y2009" /> -->
 
  </head>
 
@@ -236,9 +236,9 @@ $(document).ready(function(){
   <br>
   <img src="http://dd.c3.bf.a1.top.mail.ru/counter?id=2047352;t=55" border="0" height="31" width="88" alt="Рейтинг@Mail.ru">
 
-<div style="width: 80px; height: 30px; position:relative; right: 5%;">
+<!-- <div style="width: 80px; height: 30px; position:relative; right: 5%;">
   <script style="width: 80px; height: 30px; position:relative; right: 5%;" src="//catcut.net/adv/16992"></script>
-</div>
+</div> -->
 
 
 </footer>
